--- a/pyhwp-tests/hwp5_tests/fixtures/charshape.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/charshape.html.d/index.formatted.xhtml
@@ -6,26 +6,33 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-0"><span>가</span>&#13;</p>
-        <p class="Normal parashape-0"><span class="charshape-6">기울임</span><span class="charshape-5">진하게</span>&#13;</p>
-        <p class="Normal parashape-0"><span class="charshape-0">밑줄없음</span><span class="charshape-7">밑줄</span><span class="charshape-9">가운데줄</span><span class="charshape-8">윗줄</span>&#13;</p>
-        <p class="Normal"><span>글자크기:</span><span class="charshape-12"> 기준크기10pt</span><span class="charshape-11"> 한글90%</span><span class="charshape-13"> 영문80%</span><span class="charshape-14"> 기타70%</span>&#13;</p>
-        <p class="Normal"><span>폰트:</span><span class="charshape-15"> 한글돋움</span><span class="charshape-10"> 영문CourierNew</span><span class="charshape-16"> 기타قLucidaSansUnicode</span>&#13;</p>
-        <p class="Normal"><span class="charshape-17">붉은밑줄</span>&#13;</p>
-        <p class="Normal"><span class="charshape-18">점선밑줄</span>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-0"><span>가</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="charshape-6">기울임</span><span class="charshape-5">진하게</span>&#13;</p>
+          <p class="Normal parashape-0"><span class="charshape-0">밑줄없음</span><span class="charshape-7">밑줄</span><span class="charshape-9">가운데줄</span><span class="charshape-8">윗줄</span>&#13;</p>
+          <p class="Normal"><span>글자크기:</span><span class="charshape-12"> 기준크기10pt</span><span class="charshape-11"> 한글90%</span><span class="charshape-13"> 영문80%</span><span class="charshape-14"> 기타70%</span>&#13;</p>
+          <p class="Normal"><span>폰트:</span><span class="charshape-15"> 한글돋움</span><span class="charshape-10"> 영문CourierNew</span><span class="charshape-16"> 기타قLucidaSansUnicode</span>&#13;</p>
+          <p class="Normal"><span class="charshape-17">붉은밑줄</span>&#13;</p>
+          <p class="Normal"><span class="charshape-18">점선밑줄</span>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
