--- a/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename2.html.d/index.formatted.xhtml
@@ -6,27 +6,34 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal"><span>ko바탕 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
-        <p class=""><span>ko한컴돋움 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
-        <p class=""><span>ko바탕 enTimesNewRoman cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
-        <p class=""><span>ko바탕 enArial cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
-        <p class=""><span>ko바탕 en바탕 cn약자漢字 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
-        <p class=""><span>ko바탕 en바탕 cn간자漢字 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
-        <p class=""><span>ko바탕 en바탕 cn바탕 jp명조あ other바탕 symbol바탕 user바탕</span>&#13;</p>
-        <p class=""><span>ko바탕 en바탕 cn바탕 jp고딕あ other바탕 symbol바탕 user바탕</span>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal"><span>ko바탕 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
+          <p class=""><span>ko한컴돋움 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
+          <p class=""><span>ko바탕 enTimesNewRoman cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
+          <p class=""><span>ko바탕 enArial cn바탕 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
+          <p class=""><span>ko바탕 en바탕 cn약자漢字 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
+          <p class=""><span>ko바탕 en바탕 cn간자漢字 jp바탕 other바탕 symbol바탕 user바탕</span>&#13;</p>
+          <p class=""><span>ko바탕 en바탕 cn바탕 jp명조あ other바탕 symbol바탕 user바탕</span>&#13;</p>
+          <p class=""><span>ko바탕 en바탕 cn바탕 jp고딕あ other바탕 symbol바탕 user바탕</span>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
