--- a/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.formatted.xhtml
@@ -6,28 +6,35 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-14"><span>문단1</span>&#13;</p>
-        <p class="Normal"><span>문단2</span>&#13;</p>
-        <p class="Normal parashape-12"><span>문단3 - 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들</span><span>여쓰기 10pt 들여쓰기 10pt</span>&#13;</p>
-        <p class="Normal parashape-13"><span>문단4 - 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어</span><span>쓰기 10pt 내어쓰기 10pt</span>&#13;</p>
-        <p class="Normal parashape-15"><span>문단 5</span>&#13;</p>
-        <p class="Normal parashape-16"><span>문단 6</span>&#13;</p>
-        <p class="Normal parashape-17"><span>문단 7</span>&#13;</p>
-        <p class="Normal parashape-18"><span>문단 8</span>&#13;</p>
-        <p class="Normal parashape-19"><span>문단 9</span>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-14"><span>문단1</span>&#13;</p>
+          <p class="Normal"><span>문단2</span>&#13;</p>
+          <p class="Normal parashape-12"><span>문단3 - 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들</span><span>여쓰기 10pt 들여쓰기 10pt</span>&#13;</p>
+          <p class="Normal parashape-13"><span>문단4 - 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어</span><span>쓰기 10pt 내어쓰기 10pt</span>&#13;</p>
+          <p class="Normal parashape-15"><span>문단 5</span>&#13;</p>
+          <p class="Normal parashape-16"><span>문단 6</span>&#13;</p>
+          <p class="Normal parashape-17"><span>문단 7</span>&#13;</p>
+          <p class="Normal parashape-18"><span>문단 8</span>&#13;</p>
+          <p class="Normal parashape-19"><span>문단 9</span>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
