--- a/pyhwp-tests/hwp5_tests/fixtures/sample-5017-pics.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/sample-5017-pics.html.d/index.formatted.xhtml
@@ -6,33 +6,40 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-0"><span>글자취급</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 126pt; height: 75.6pt;"/></div>&#13;</p>
-        <p class="Normal parashape-0"><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 158.28pt; height: 94.97pt;"/></div><span>어울림 (양쪽 본문)</span>&#13;</p>
-        <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
-        <p class="Normal parashape-0"><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 158.28pt; height: 94.97pt;"/></div><span>어울림 (왼쪽 본문)</span>&#13;</p>
-        <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
-        <p class="Normal parashape-0"><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 158.28pt; height: 94.97pt;"/></div><span>어울림 (오른쪽 본문)</span>&#13;</p>
-        <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
-        <p class="Normal parashape-0"><span>자리차지 (왼쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
-        <p class="Normal parashape-0"><span>자리차지 (오른쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
-        <p class="Normal parashape-0"><span>자리차지 (가운데정렬)</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
-        <p class="Normal parashape-0"><span>자리차지 (안쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000C.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
-        <p class="Normal parashape-0"><span>자리차지 (바깥쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000C.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
-        <p class="Normal parashape-0"><span>글뒤로</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 166.35pt; height: 99.81pt;"/></div>&#13;</p>
-        <p class="Normal parashape-0"><span>글 앞으로</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 136.54pt; height: 81.93pt;"/></div>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-0"><span>글자취급</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 126pt; height: 75.6pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 158.28pt; height: 94.97pt;"/></div><span>어울림 (양쪽 본문)</span>&#13;</p>
+          <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
+          <p class="Normal parashape-0"><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 158.28pt; height: 94.97pt;"/></div><span>어울림 (왼쪽 본문)</span>&#13;</p>
+          <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
+          <p class="Normal parashape-0"><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 158.28pt; height: 94.97pt;"/></div><span>어울림 (오른쪽 본문)</span>&#13;</p>
+          <p class="Normal parashape-0"><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 </span><span>어울림 어울림 어울림 어울림 어울림 어울림 어울</span><span>림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span><span>울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span>&#13;</p>
+          <p class="Normal parashape-0"><span>자리차지 (왼쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><span>자리차지 (오른쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><span>자리차지 (가운데정렬)</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><span>자리차지 (안쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000C.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><span>자리차지 (바깥쪽정렬)</span><div class="GShapeObject"><img src="bindata/BIN000C.jpg" style="width: 161.38pt; height: 96.82pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><span>글뒤로</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 166.35pt; height: 99.81pt;"/></div>&#13;</p>
+          <p class="Normal parashape-0"><span>글 앞으로</span><div class="GShapeObject"><img src="bindata/BIN000B.jpg" style="width: 136.54pt; height: 81.93pt;"/></div>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
