--- a/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/tabdef.html.d/index.formatted.xhtml
@@ -6,27 +6,34 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-1">			&#13;</p>
-        <p class="Normal parashape-13"><span>L</span><span>L</span><span>L</span>&#13;</p>
-        <p class="Normal parashape-12"><span>R</span><span>R</span><span>R</span>&#13;</p>
-        <p class="Normal parashape-14"><span>C</span><span>C</span><span>C</span>&#13;</p>
-        <p class="Normal parashape-15"><span>M</span><span>M</span><span>M</span>&#13;</p>
-        <p class="Normal parashape-16"><span>L</span><span>L</span><span>L</span>&#13;</p>
-        <p class="Normal parashape-17"><span>E</span><span>E</span>&#13;</p>
-        <p class="Normal parashape-18"><span>I</span><span>I</span><span>I</span>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-1">			&#13;</p>
+          <p class="Normal parashape-13"><span>L</span><span>L</span><span>L</span>&#13;</p>
+          <p class="Normal parashape-12"><span>R</span><span>R</span><span>R</span>&#13;</p>
+          <p class="Normal parashape-14"><span>C</span><span>C</span><span>C</span>&#13;</p>
+          <p class="Normal parashape-15"><span>M</span><span>M</span><span>M</span>&#13;</p>
+          <p class="Normal parashape-16"><span>L</span><span>L</span><span>L</span>&#13;</p>
+          <p class="Normal parashape-17"><span>E</span><span>E</span>&#13;</p>
+          <p class="Normal parashape-18"><span>I</span><span>I</span><span>I</span>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
