--- a/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/table.html.d/index.formatted.xhtml
@@ -6,23 +6,30 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-1"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal"><span/></p></td><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal"><span/></p></td><td class="borderfill-2" colspan="1" rowspan="2" style="width:37.79pt; height:141.72pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-2" colspan="2" rowspan="1" style="width:75.58pt; height:70.86pt;"><p class="Normal"><span/></p></td></tr></table>&#13;</p>
-        <p class="Normal parashape-1">
-          <span/>
-        </p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-1"><table cellspacing="0" class="borderfill-2" style="border-collapse:collapse;"><tr><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal"><span/></p></td><td class="borderfill-2" colspan="1" rowspan="1" style="width:37.79pt; height:70.86pt;"><p class="Normal"><span/></p></td><td class="borderfill-2" colspan="1" rowspan="2" style="width:37.79pt; height:141.72pt;"><p class="Normal"><span/></p></td></tr><tr><td class="borderfill-2" colspan="2" rowspan="1" style="width:75.58pt; height:70.86pt;"><p class="Normal"><span/></p></td></tr></table>&#13;</p>
+          <p class="Normal parashape-1">
+            <span/>
+          </p>
+        </div>
       </div>
     </div>
   </body>
