--- a/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/textbox.html.d/index.formatted.xhtml
@@ -6,20 +6,27 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal"><span>그림 </span><span> 캡션</span>&#13;</p><p class="Normal"><span>글상자</span>&#13;</p></div>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-1"><div class="GShapeObject"><p class="Normal"><span>그림 </span><span class="autonumbering autonumbering-picture">1</span><span> 캡션</span>&#13;</p><p class="Normal"><span>글상자</span>&#13;</p></div>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
