--- a/pyhwp-tests/hwp5_tests/fixtures/underline-styles.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/underline-styles.html.d/index.formatted.xhtml
@@ -6,30 +6,37 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-11"><span class="charshape-5">실선밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-6">대시밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-7">점선밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-8">대시일점밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-9">대시이점밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-10">긴대시밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-11">큰점선밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-12">이중실선밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-13">이중증가밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-14">이중감소밑줄</span>&#13;</p>
-        <p class="Normal parashape-11"><span class="charshape-15">삼중밑줄</span>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-11"><span class="charshape-5">실선밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-6">대시밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-7">점선밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-8">대시일점밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-9">대시이점밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-10">긴대시밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-11">큰점선밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-12">이중실선밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-13">이중증가밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-14">이중감소밑줄</span>&#13;</p>
+          <p class="Normal parashape-11"><span class="charshape-15">삼중밑줄</span>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
