--- a/pyhwp-tests/hwp5_tests/fixtures/facename.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/facename.html.d/index.formatted.xhtml
@@ -6,34 +6,41 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-11"><span>ko바탕en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko</span><span class="charshape-5">한컴바탕</span><span>en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko</span><span class="charshape-6">한양신명조</span><span>en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko</span><span class="charshape-7">휴먼명조</span><span>en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-8">Arial</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-9">ComicSansMS</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-10">CourierNew</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-11">DejaVuSerif</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en바탕cn</span><span class="charshape-12">SimHei</span><span>jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en바탕cn</span><span class="charshape-13">SimSun</span><span>jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en바탕cn바탕jp</span><span class="charshape-14">MSGothic</span><span>other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11"><span>ko바탕en바탕cn바탕jp</span><span class="charshape-15">MSMinCho</span><span>other바탕symbol바탕user바탕</span>&#13;</p>
-        <p class="Normal parashape-11">
-          <span/>
-        </p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-11"><span>ko바탕en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko</span><span class="charshape-5">한컴바탕</span><span>en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko</span><span class="charshape-6">한양신명조</span><span>en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko</span><span class="charshape-7">휴먼명조</span><span>en바탕cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-8">Arial</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-9">ComicSansMS</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-10">CourierNew</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en</span><span class="charshape-11">DejaVuSerif</span><span>cn바탕jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en바탕cn</span><span class="charshape-12">SimHei</span><span>jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en바탕cn</span><span class="charshape-13">SimSun</span><span>jp바탕other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en바탕cn바탕jp</span><span class="charshape-14">MSGothic</span><span>other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11"><span>ko바탕en바탕cn바탕jp</span><span class="charshape-15">MSMinCho</span><span>other바탕symbol바탕user바탕</span>&#13;</p>
+          <p class="Normal parashape-11">
+            <span/>
+          </p>
+        </div>
       </div>
     </div>
   </body>
