--- a/pyhwp-tests/hwp5_tests/fixtures/footnote-endnote.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/footnote-endnote.html.d/index.formatted.xhtml
@@ -6,21 +6,28 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-11"><span>각주참조</span><p class="Footnote"><span> 각주입니다.</span>&#13;</p><p class="Footnote"><span> 각주 두 번째입니다.</span>&#13;</p>&#13;</p>
-        <p class="Normal parashape-11"><span>미주참조</span><p class="Normal"><span> 미주입니다.</span>&#13;</p><p class="Normal"><span> 미주 두 번째입니다.</span>&#13;</p>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="Page">
+          <p class="Normal parashape-11"><span>각주참조</span>&#13;</p>
+          <p class="Normal parashape-11"><span>미주참조</span>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
