--- a/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.formatted.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/headerfooter.html.d/index.formatted.xhtml
@@ -6,21 +6,48 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
+}
+.HeaderArea {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 150mm;
+  height: 15mm;
+}
+.FooterArea {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 150mm;
+  height: 15mm;
 }
 </style>
   </head>
   <body>
     <div class="Section Section-0 Paper">
-      <div class="Page">
-        <p class="Normal parashape-1">&#13;</p>
-        <p class="Normal parashape-1"><p class="Header"><span>Header 이것은 머리말입니다</span><span>.</span>&#13;</p><p class="Header"><span>Footer 이것은 꼬리말입니다.</span>&#13;</p>&#13;</p>
+      <div class="HeaderPageFooter">
+        <div class="HeaderArea">
+          <p class="Header"><span>Header 이것은 머리말입니다</span><span class="autonumbering autonumbering-page">1</span><span>.</span>&#13;</p>
+        </div>
+        <div class="Page">
+          <p class="Normal parashape-9"><span>첫 페이지</span>&#13;</p>
+          <p class="Normal parashape-9">&#13;</p>
+        </div>
+        <div class="FooterArea">
+          <p class="Header"><span>Footer 이것은 꼬리말입니다.</span>&#13;</p>
+        </div>
       </div>
     </div>
   </body>
