--- a/pyhwp-tests/hwp5_tests/fixtures/issue30.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/issue30.html.d/index.xhtml
@@ -2,12 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="content-type" content="text/html; charset=utf-8" /><title>ODT 변환 시 원문에 없는 공백이 띄엄띄엄 나타남 ODT 변환 시 중간 중간에 공백 문자들이 들어가는 현상이 발생한다</title><link rel="stylesheet" href="styles.css" type="text/css" /><style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><span>ODT 변환 시 원문에 없는 공백이 띄엄띄엄 나타남 ODT 변환 시 중간 중간에 공백 문자들</span><span>이 들어가는 현상이 발생한다. 아마도 변환 과정에서 xmllint의 reindent 때문에 new line </span><span>문자가 들어가는 것 같음.</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><span>ODT 변환 시 원문에 없는 공백이 띄엄띄엄 나타남 ODT 변환 시 중간 중간에 공백 문자들</span><span>이 들어가는 현상이 발생한다. 아마도 변환 과정에서 xmllint의 reindent 때문에 new line </span><span>문자가 들어가는 것 같음.</span>&#13;</p></div></div></div></body></html>
