--- a/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/multicolumns-in-common-controls.html.d/index.xhtml
@@ -2,12 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="content-type" content="text/html; charset=utf-8" /><title></title><link rel="stylesheet" href="styles.css" type="text/css" /><style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-11"><table class="borderfill-2" cellspacing="0" style="border-collapse:collapse;"><caption class="TableCaption" style="caption-side: bottom;"><p class="Normal"><span>표 </span><span> </span>&#13;</p></caption><tr><td class="borderfill-2" style="width:419.54pt; height:2.82pt;" rowspan="1" colspan="1"><p class="Normal parashape-12"><span>다단 다단 다단 다단 다단 다단 다단 다단 </span><span>다단 다단 다단 다단 다단 다단 다단 다단 </span>&#13;</p></td></tr></table>&#13;</p><p class="Normal parashape-11"><div class="GShapeObject"><p class="Normal"><span>그림 </span><span> </span>&#13;</p><p class="Normal parashape-12"><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span>&#13;</p></div>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-11"><table class="borderfill-2" cellspacing="0" style="border-collapse:collapse;"><caption class="TableCaption" style="caption-side: bottom;"><p class="Normal"><span>표 </span><span class="autonumbering autonumbering-table">1</span><span> </span>&#13;</p></caption><tr><td class="borderfill-2" style="width:419.54pt; height:2.82pt;" rowspan="1" colspan="1"><p class="Normal parashape-12"><span>다단 다단 다단 다단 다단 다단 다단 다단 </span><span>다단 다단 다단 다단 다단 다단 다단 다단 </span>&#13;</p></td></tr></table>&#13;</p><p class="Normal parashape-11"><div class="GShapeObject"><p class="Normal"><span>그림 </span><span class="autonumbering autonumbering-picture">1</span><span> </span>&#13;</p><p class="Normal parashape-12"><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span><span>다단 다단 다단 </span>&#13;</p></div>&#13;</p></div></div></div></body></html>
