--- a/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/pagedefs.html.d/index.xhtml
@@ -2,22 +2,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="content-type" content="text/html; charset=utf-8" /><title>pagedefs</title><link rel="stylesheet" href="styles.css" type="text/css" /><style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
-</style><style type="text/css">
 .Section-1 {
-  width: 841.88pt;
+  width: 297mm;
+}
+.Section-1 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-1 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-1"><span>Section 1: A4 portrait</span>&#13;</p></div></div><div class="Section Section-1 Paper"><div class="Page"><p class="Normal parashape-1"><span>Section 2: A4 landscape</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><span>Section 1: A4 portrait</span>&#13;</p></div></div></div><div class="Section Section-1 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-1"><span>Section 2: A4 landscape</span>&#13;</p></div></div></div></body></html>
