--- a/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.xhtml
+++ b/pyhwp-tests/hwp5_tests/fixtures/parashape.html.d/index.xhtml
@@ -2,12 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="content-type" content="text/html; charset=utf-8" /><title>문단1</title><link rel="stylesheet" href="styles.css" type="text/css" /><style type="text/css">
 .Section-0 {
-  width: 595.28pt;
+  width: 210mm;
+}
+.Section-0 .HeaderPageFooter {
+  position: relative;
+  margin-top: 20mm;
+  margin-right: 30mm;
+  margin-bottom: 15mm;
+  margin-left: 30mm;
 }
 .Section-0 .Page {
-  margin-top: 56.68pt;
-  margin-right: 85.04pt;
-  margin-bottom: 42.52pt;
-  margin-left: 85.04pt;
+  padding-top: 15mm;
+  padding-bottom: 15mm;
 }
-</style></head><body><div class="Section Section-0 Paper"><div class="Page"><p class="Normal parashape-14"><span>문단1</span>&#13;</p><p class="Normal"><span>문단2</span>&#13;</p><p class="Normal parashape-12"><span>문단3 - 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들</span><span>여쓰기 10pt 들여쓰기 10pt</span>&#13;</p><p class="Normal parashape-13"><span>문단4 - 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어</span><span>쓰기 10pt 내어쓰기 10pt</span>&#13;</p><p class="Normal parashape-15"><span>문단 5</span>&#13;</p><p class="Normal parashape-16"><span>문단 6</span>&#13;</p><p class="Normal parashape-17"><span>문단 7</span>&#13;</p><p class="Normal parashape-18"><span>문단 8</span>&#13;</p><p class="Normal parashape-19"><span>문단 9</span>&#13;</p></div></div></body></html>
+</style></head><body><div class="Section Section-0 Paper"><div class="HeaderPageFooter"><div class="Page"><p class="Normal parashape-14"><span>문단1</span>&#13;</p><p class="Normal"><span>문단2</span>&#13;</p><p class="Normal parashape-12"><span>문단3 - 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들여쓰기 10pt 들</span><span>여쓰기 10pt 들여쓰기 10pt</span>&#13;</p><p class="Normal parashape-13"><span>문단4 - 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어쓰기 10pt 내어</span><span>쓰기 10pt 내어쓰기 10pt</span>&#13;</p><p class="Normal parashape-15"><span>문단 5</span>&#13;</p><p class="Normal parashape-16"><span>문단 6</span>&#13;</p><p class="Normal parashape-17"><span>문단 7</span>&#13;</p><p class="Normal parashape-18"><span>문단 8</span>&#13;</p><p class="Normal parashape-19"><span>문단 9</span>&#13;</p></div></div></div></body></html>
